--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,23 @@ npm-debug.log
 *.lock
 jsconfig.json
 foundry
+
+# VS Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
+
+#scss
+.sass-cache/
+*.css.map
+*.sass.map
+*.scss.map
