--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,11 @@ npm-debug.log
 *.lock
 jsconfig.json
 foundry
+packs/gear/
+packs/compulsion/
+packs/deterrent/
+packs/powers/
+packs/vulnerability/
 
 # VS Code
 .vscode/*
