--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ packs/npc-vulnerabilities/
 packs/roll_tables/complication-details
 packs/roll_tables/operational-details
 packs/roll_tables/operational-questions
+packs/roll_tables/possible-complications
 packs/roll_tables/possible-complications-table
 packs/roll_tables/random-lead
 
